--- a/Project/3_Skill_Demand.ipynb
+++ b/Project/3_Skill_Demand.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Top-Tier Skill Demand in Leading Data Roles\n",
-    "We'll review the most in-demand data roles and the most requested skills."
+    "# Top-Tier Skill Demand in Leading Data Roles"
    ]
   },
   {
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,14 +46,18 @@
     }
    ],
    "source": [
+    "# Filter by the United States and convert job_skills column values from a list to individual ones.\n",
     "df_US = df[df[\"job_country\"] == \"United States\"].copy()\n",
     "df_skills = df_US.explode(\"job_skills\")\n",
     "\n",
+    "# Data frame with data roles and their job skills\n",
     "df_job_title_count = df_US[\"job_title_short\"].value_counts().reset_index(name=\"jobs_total\")\n",
     "df_skills_count = df_skills.groupby([\"job_title_short\", \"job_skills\"]).size().reset_index(name=\"skill_count\").sort_values(\"skill_count\", ascending=False)\n",
+    "# Create a new DataFrame for upcoming calculations and merge it with the previous one\n",
     "df_skills_per = pd.merge(df_skills_count, df_job_title_count, how=\"left\", on=\"job_title_short\")\n",
     "df_skills_per[\"skill_percentage\"] = ( df_skills_per[\"skill_count\"] / df_skills_per[\"jobs_total\"] ) * 100\n",
     "\n",
+    "#Plotting\n",
     "top_title = df_skills_count[\"job_title_short\"].unique().tolist()\n",
     "top_title = sorted(top_title[:3])\n",
     "fig, ax = plt.subplots(len(top_title), 1)\n",
